# wezterm-parallel

./: .README.md.swp  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUSTOMIZATION_GUIDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  FEATURE_SUMMARY.md  LICENSE  PROGRESS.md  PROJECT_CLEANUP_PLAN.md  PROJECT_STRUCTURE.md  PROMPT.md  QUICKSTART.md  README.md  SETUP-GUIDE.md  TESTING.md  blog_draft.md  cobertura.xml  codecov.yml  demo_wezterm.lua  deny.toml  detailed_test.py  install.sh  lcov.info  package-lock.json  package.json  release.sh  setup.sh  shared_file.txt  test_ipc_task.py  test_keys.lua  test_lua_integration.lua  test_productivity_tracking.py  test_runner.sh  test_task_creation.py  test_template_integration.lua  (+6 more)
.github/: pull_request_template.md
config/: quickstart-config.yaml  quickstart-wezterm.lua
coverage-phase1/: tarpaulin-report.html
demo/: README.md
docs/: API.md  ARCHITECTURE.md  CI-CD.md  CONTRIBUTING.md  CUSTOMIZATION.md  DATA-FLOW.md  DEPLOYMENT.md  DOCUMENTATION-MAP.md  FAQ.md  FEATURE-SPEC.md  QUICKSTART-TROUBLESHOOTING.md  SECURITY.md  TESTING.md  USER-GUIDE.md  implementation-plan.md  installation.md  prd.md  setup-guide.md  tech-stack.md  troubleshooting.md  tutorial.md
infrastructure/: deployment-env.yaml.template
logs/: wezterm-parallel.json
prompts/: README-ja.md  README.md  basic-development-ja.md  basic-development.md  enterprise-development.md  opensource-development.md  startup-development.md
releases/: wezterm-multi-dev-v0.1.0.tar.gz.sha256
scripts/: .eslintrc.json  README.md  (+11 more)
(+143 files in other folders)
