[package]
name = "wezterm_parallel"
version = "0.1.0"
edition = "2021"

[lib]
name = "wezterm_parallel"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
tempfile = "3"

[[example]]
name = "commander_demo"
path = "examples/commander_demo/main.rs"
