[package]
name = "wezterm-parallel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
sysinfo = "0.29"
tokio-tungstenite = "0.20"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
notify = { version = "6.0", default-features = false, features = ["macos_fsevent"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"

[[bin]]
name = "wezterm-parallel"
path = "src/main.rs"
